configmap-pingpong.yaml
apiVersion: v1
kind: Pod
metadata:
  name: refactorypingpong
  labels:
    name: refactorypingpong
spec:
    containers:
      - name: pingpongapp
        image: reckyprmn/refactorypingpong
        ports:
          - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: refactory-pingpong-configmap-service
spec:
  type: NodePort
  selector:
    name: refactorypingpong
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30001
