deployment-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: refactorypingpong-app
  labels:
    name: refactorypingpong-app
spec:
  replicas: 3
  selector:
    matchLabels:
      name: refactorypingpong-app
  template:
    metadata:
      name: refactorypingpong-app
      labels:
        name: refactorypingpong-app
    spec:
      containers:
        - name: refactorypingpong-app
          image: reckyprmn/refactorypingpong
          ports:
            - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: refactorypingpong-app-service
spec:
  type: NodePort
  selector:
    name: refactorypingpong-app
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30001
