service-pingpong-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: pingpong-ingress
  labels:
    name: pingpong-ingress
spec:
  rules:
    - host: pingpong.recky.refactory
      http:
        paths:
          - path: /
            backend:
              serviceName: pingpongapp-service
              servicePort: 80
